static/styles/index.css
/* ... */
.property-specs .icon {
  height: 30px;
  width: 30px;
}

/* Image slider buttons */
.image-slider-buttons-container,
.image-slider-buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

.image-slider-buttons-container {
  position: absolute;
  top: 45%;
  width: 70px;
  height: 70px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

.image-slider-buttons-container:hover {
  background-color: #f5f5f555;
  color: rgba(51, 51, 51, 0.736);
  border: 0px;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

.image-slider-buttons {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  border: 0px;
  background-color: #f5f5f5;
}

.image-slider-buttons>img {
  height: 40%;
  width: 40%;
}

.welcome-pane-container .nextBtn {
  right: 30px;
}

.welcome-pane-container .prevBtn {
  left: 30px;
}

/* Popular locations */
.popular-locations-main-container {
  position: relative;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.popular-locations-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0;
  margin: 90px 0;
}

.popular-locations-container>h3 {
  font-size: xx-large;
  font-weight: 500;
  color: #333;
  margin: 0;
}

.popular-locations-container>p,
.explore-container>p {
  /* width: 600px; */
  text-align: center;
  font-size: 14px;
  color: rgb(116, 116, 116);
}

.popular-locations-container>.popular-locations {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 25px;
  margin: 30px auto;
  width: 100%;
}

.popular-locations>.location {
  height: 300px;
  width: 100%;
  display: flex;
  flex-direction: column;
  position: relative;
}

.popular-locations>.location>img {
  height: 100%;
  width: 100%;
  border-radius: 5px;
}

.location .location-details {
  position: absolute;
  bottom: 25px;
  left: 25px;
  width: 100%;
  color: #f5f5f5;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
  z-index: 2;
}
.location:hover .location-details,
.explore-list-item:hover .explore-list-item-details {
  color: #fff;
  bottom: 40px;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}
.location-details p {
  margin: 0;
  padding: 0;
}
.location-details .place {
  font-size: larger;
  font-weight: 700;
}
.location-details .count {
  font-size: small;
}

.location > .overlay,
.explore-list-item > .overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  background: linear-gradient(0deg,
      rgba(0, 0, 0, 0.4) 0%,
      rgba(245, 245, 245, 0.2) 100%);
  border-radius: 5px;
  z-index: 1;
  visibility: hidden;
  -webkit-transition: all 0.2s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.2s ease;
}

.location:hover>.overlay,
.explore-list-item:hover>.overlay {
  visibility: visible;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}


/* Explore Apartment Types */
.explore {
  display: flex;
  justify-content: center;
  align-items: center;
}
.explore-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0;
  margin: 90px 0;
}
.explore-container>h3 {
  font-size: xx-large;
  font-weight: 500;
  color: #333;
  margin: 0;
}
.explore-list {
  display: grid;
  grid-template-columns: repeat(4, minmax(270px, 1fr));
  grid-template-rows: repeat(2, minmax(200px, 1fr));
  grid-template-areas:
    "a a b c "
    "d e e c ";
  gap: 20px;
  margin: 30px;
  height: 500px;
  width: 100%;
  box-sizing: border-box;
}
.explore1 {
  grid-area: a;
}
.explore2 {
  grid-area: b;
}
.explore3 {
  grid-area: c;
}
.explore4 {
  grid-area: d;
}
.explore5 {
  grid-area: e;
}

.explore-list>.explore-list-item {
  position: relative;
  width: 100%;
  height: 100%;
  margin: 0;
  flex-direction: column;
}

.explore-item-image {
  height: 100%;
  width: 100%;
  position: relative;
  border-radius: 5px;
  overflow: hidden;
}
.explore-item-image > img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.explore-list-item .overlay {
  display: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(78, 78, 78, 0.4);
  z-index: 1;
}

.explore-list-item-details {
  position: absolute;
  bottom: 20px;
  left: 20px;
  /* width: 100%; */
  color: #f5f5f5;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
  z-index: 2;
}

.explore-list-item-details:hover {
  color: #fff;
  bottom: 40px;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

.explore-list-item p {
  margin: 0;
  padding: 0;
}

.explore-list-item-details p:first-child {
  font-size: x-large;
  font-weight: 700;
}

/* Featured Properties */
.featured-properties {
  background-color: #eeeeee;
  padding: 70px 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.featured-properties p {
  margin: 0;
}

.featured-properties-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 20px;
}
/* ... */

